--- a/style.css
+++ b/style.css
@@ -10,21 +10,24 @@
   src: url(./fonts/Norse-Bold.otf);
 }
 
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-wrap: wrap;
+html, body {
+  height: 100vh;
+  overflow: hidden;
 }
 
 .container {
   display: flex;
   justify-content: center;
-  align-items: stretch; /* Hace que las dos secciones tengan la misma altura */
+  align-items: stretch;
+  width: 100%;
+  height: 100vh; 
 }
 
 .left {
-  position: relative; /* Necesario para posicionar elementos dentro de esta imagen */
+  position: relative;
   width: 40%;
+  display: flex;
+  flex-direction: column;
 }
 
 .left img {
@@ -78,11 +81,10 @@ body {
 }
 
 .right {
-  width: 60%; /* Ancho de la sección derecha */
-  background-color: #f4f4f4; /* Fondo de color gris claro */
+  width: 60%;
+  background-color: #f4f4f4;
   display: flex;
   flex-direction: column;
-  
   position: relative;
 }
 
@@ -147,8 +149,8 @@ fieldset {
 
 .field-label {
   display: flex;
-  flex-direction: column; /* Pone el label arriba y el input abajo */
-  gap: 5px; /* Espaciado entre label e input */
+  flex-direction: column; 
+  gap: 5px;
   width: 40%;
 }
 
